--- a/login.html
+++ b/login.html
@@ -5,10 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./assets/css/login.css">
-    <title>Document</title>
+	<link rel="stylesheet" type="text/css" href="assets/lib/layui/css/layui.css"/>
+	<title>大事件登陆注册</title>
 
 </head>
 <body>
-    
+    <div class="layui-main">
+    	<img src="assets/images/logo.png" >
+    </div>
+	<div class="loginAndRegBox">
+		<div class="title-box"></div>
+		<!-- 登录div -->
+		<div class="login-box">
+			<a href="javascript:;">去注册账号</a>
+		</div>
+		<!-- 注册div -->
+		<div class="reg-box">
+			<a href="javascript:;">去登陆</a>
+		</div>
+	</div>
 </body>
 </html>
