--- a/login.html
+++ b/login.html
@@ -16,13 +16,51 @@
 	<div class="loginAndRegBox">
 		<div class="title-box"></div>
 		<!-- 登录div -->
-		<div class="login-box">
-			<a href="javascript:;">去注册账号</a>
+		<div class="login-box">		
+			<form class="layui-form" id="form-login">
+			  <div class="layui-form-item">  
+			  <i class="layui-icon layui-icon-username"></i>
+			      <input   type="text" name="username" required  lay-verify="required" placeholder="请输入账号" autocomplete="off" class="layui-input" style="padding-left: 32px;">
+			  </div>
+			  <div class="layui-form-item">
+				  <i class="layui-icon layui-icon-password"></i>
+			      <input  type="password" name="password" required  lay-verify="required|pass" placeholder="请输入密码" autocomplete="off" class="layui-input" style="padding-left: 32px;">
+			  </div>
+			  <div class="layui-form-item">
+				   <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="formDemo" style="background-color: skyblue;">登录</button>
+			  </div>
+			  <div class="layui-form-item link">
+			  	<a href="javascript:;">去注册账号</a>
+			  </div>
+			  </form>
 		</div>
 		<!-- 注册div -->
 		<div class="reg-box">
-			<a href="javascript:;">去登陆</a>
+			<form class="layui-form" id="form-reg">
+			  <div class="layui-form-item">  
+			  <i class="layui-icon layui-icon-username"></i>
+			      <input   type="text" name="username" required  lay-verify="required" placeholder="请输入账号" autocomplete="off" class="layui-input" style="padding-left: 32px;">
+			  </div>
+			  <div class="layui-form-item">
+				  <i class="layui-icon layui-icon-password"></i>
+			      <input  type="password" name="password" required  lay-verify="required|pass" placeholder="请输入密码" autocomplete="off" class="layui-input" style="padding-left: 32px;">
+			  </div>
+			  <div class="layui-form-item">
+			  	  <i class="layui-icon layui-icon-password"></i>
+			      <input  type="password" name="repassword" required  lay-verify="required|pass|repass" placeholder="请重新输入密码" autocomplete="off" class="layui-input" style="padding-left: 32px;">
+			  </div>
+			  <div class="layui-form-item">
+				   <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="formDemo" style="background-color: skyblue;">注册</button>
+			  </div>
+			  <div class="layui-form-item link">
+			  	<a href="javascript:;">去登录</a>
+			  </div>
+			  </form>
 		</div>
 	</div>
+	<script src="assets/lib/layui/layui.all.js"></script>
+	<script src="assets/lib/jquery.js"></script>
+	<script src="assets/js/baseAPI.js"></script>
+	<script src="assets/js/login.js"></script>
 </body>
 </html>
