--- a/index.html
+++ b/index.html
@@ -5,8 +5,119 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="assets/lib/layui/css/layui.css"/>
+	<link rel="stylesheet" type="text/css" href="assets/css/index.css"/>
 </head>
 <body>
-	首页
+<div class="layui-layout layui-layout-admin">
+  <div class="layui-header">
+    <div class="layui-logo layui-hide-xs layui-bg-black">
+		<img src="assets/images/logo.png" />
+	</div>
+    <!-- 头部区域（可配合layui 已有的水平导航） -->
+    <ul class="layui-nav layui-layout-left">
+      <!-- 移动端显示 -->
+      <li class="layui-nav-item layui-show-xs-inline-block layui-hide-sm" lay-header-event="menuLeft">
+        <i class="layui-icon layui-icon-spread-left"></i>
+      </li>
+    </ul>
+    <ul class="layui-nav layui-layout-right">
+      <li class="layui-nav-item layui-hide layui-show-md-inline-block">
+        <a href="javascript:;" class="userinfo">
+          <img src="//tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg" class="layui-nav-img">
+		  <span class="text-avatar">M</span>
+		 个人中心
+        </a>
+        <dl class="layui-nav-child">
+          <dd><a href="">基本资料</a></dd>
+          <dd><a href="">更换头像</a></dd>
+          <dd><a href="">重置密码</a></dd>
+        </dl>
+      </li>
+	  <li class="layui-nav-item layui-hide layui-show-md-inline-block"><a href="javascript:;" class="logout">退出</a></li>
+      <li class="layui-nav-item" lay-header-event="menuRight" lay-unselect>
+        <a href="javascript:;">
+          <i class="layui-icon layui-icon-more-vertical"></i>
+        </a>
+      </li>
+    </ul>
+  </div>
+  
+  <div class="layui-side layui-bg-black">
+    <div class="layui-side-scroll">
+      <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
+	  <div class="userinfo">
+	    <img src="//tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg" 
+		class="layui-nav-img">
+		<span class="text-avatar">M</span>
+		<span id="huanying">
+			欢迎***
+		</span>
+	  </div>
+      <ul class="layui-nav layui-nav-tree" lay-shrink="all" >
+		<li class="layui-nav-item layui-this"><a href="/四阶段/大事件/home/dashboard.html" target="ifm">首页</a></li>
+        <li class="layui-nav-item">
+          <a class="" href="javascript:;">文章管理</a>
+          <dl class="layui-nav-child">
+            <dd><a href="javascript:;">文章类别</a></dd>
+            <dd><a href="javascript:;">文章列表</a></dd>
+            <dd><a href="javascript:;">发布文章</a></dd>
+          </dl>
+        </li>
+        <li class="layui-nav-item">
+          <a href="javascript:;">个人中心</a>
+          <dl class="layui-nav-child">
+            <dd><a href="javascript:;">基本资料</a></dd>
+            <dd><a href="javascript:;">更换头像</a></dd>
+           <dd><a href="javascript:;">重置密码</a></dd>
+          </dl>
+        </li>
+      </ul>
+    </div>
+  </div>
+  
+  <div class="layui-body">
+    <!-- 内容主体区域 -->
+  
+  <iframe name="ifm" src="/四阶段/大事件/home/dashboard.html"></iframe>
+  </div>
+  
+  <div class="layui-footer">
+    <!-- 底部固定区域 -->
+		大事件
+  </div>
+</div>
+<script src="./assets/lib/layui/layui.all.js"></script>
+<script src="./assets/lib/jquery.js"></script>
+<script src="./assets/js/baseAPI.js"></script>
+<script src="./assets/js/index.js"></script>
+<!-- <script>
+//JS 
+layui.use(['element', 'layer', 'util'], function(){
+  var element = layui.element
+  ,layer = layui.layer
+  ,util = layui.util
+  ,$ = layui.$;
+  
+  //头部事件
+  util.event('lay-header-event', {
+    //左侧菜单事件
+    menuLeft: function(othis){
+      layer.msg('展开左侧菜单的操作', {icon: 0});
+    }
+    ,menuRight: function(){
+      layer.open({
+        type: 1
+        ,content: '<div style="padding: 15px;">处理右侧面板的操作</div>'
+        ,area: ['260px', '100%']
+        ,offset: 'rt' //右上角
+        ,anim: 5
+        ,shadeClose: true
+      });
+    }
+  });
+  
+});
+</script> -->
 </body>
 </html>
